Fix layout issue

--- a/src/Components/Card/Card.css
+++ b/src/Components/Card/Card.css
@@ -1,59 +1,65 @@
-*, *::after, *::before {
-    box-sizing: border-box;
-    margin: 0;
+*,
+*::after,
+*::before {
+  box-sizing: border-box;
+  margin: 0;
 }
 
 .card-container {
-    display: flex;
-    column-gap: 2em;
-    border-bottom: 2px solid #efefef;
-    padding: 3em;
-    margin-top: 1em;
+  display: flex;
+  column-gap: 2em;
+  border-bottom: 2px solid #efefef;
+  padding: 3em;
+  margin-top: 1em;
+  width: 90%;
+  max-width: 800px;
+  margin: 0 auto;
 }
 
 .card__img {
-    width: 200px;
-    height: auto;
-    object-fit: cover;
-    border-radius: 10px;
+  width: 200px;
+  height: auto;
+  object-fit: cover;
+  border-radius: 10px;
 }
 
-.card__text__country, .card__text__google-maps-link {
-    display: inline-block;
-    margin-top: 2em;
+.card__text__country,
+.card__text__google-maps-link {
+  display: inline-block;
+  margin-top: 2em;
 }
 
 .card__text__country {
-    text-transform: uppercase;
-    letter-spacing: .1rem;
-    margin-right: 1em;
-    font-weight: 500;
+  text-transform: uppercase;
+  letter-spacing: 0.1rem;
+  margin-right: 1em;
+  font-weight: 500;
 }
 
 .card__text__google-maps-link {
-    color: grey;
-    text-underline-offset: .2em;
+  color: grey;
+  text-underline-offset: 0.2em;
 }
 
 .card__text__country__icon {
-    color: #F55A5A;
+  color: #f55a5a;
 }
 
 .card__text__title {
-    margin-top: .2em;
-    font-size: 2.5rem;
+  margin-top: 0.2em;
+  font-size: 2.5rem;
 }
 
 .card__text__date {
-    font-weight: bold;
-    font-size: .9rem;
-    margin-top: 2rem;
+  font-weight: bold;
+  font-size: 0.9rem;
+  margin-top: 2rem;
 }
 
 .card__text__description {
-    margin-top: 1rem;
-    line-height: 1.3;
-    letter-spacing: .05rem;
-    word-spacing: .2rem;
-    text-align: justify;
+  margin-top: 1rem;
+  line-height: 1.3;
+  letter-spacing: 0.05rem;
+  word-spacing: 0.2rem;
+  text-align: justify;
 }
